# tork-cli

./: Cargo.toml  LICENSE
crates/tork-cli/: Cargo.toml
crates/tork-cli/src/: cli.rs  ui.rs
crates/tork-cli/src/commands/: new.rs
crates/tork-cli/src/templates/: mod.rs
