# Tork developer CLI workspace.
#
# A standalone workspace, sibling to `framework/` and `orm/`, so the unified `tork`
# command can grow independently. It path-depends the ORM's migration CLI for
# `tork migrate ...`; everything else (project scaffolding, cargo wrappers) is
# self-contained.
[workspace]
resolver = "2"
members = ["crates/tork-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["muzakon <hasanmuzak@hotmail.com>"]
license = "MIT"
repository = "https://github.com/tork-rs/tork"

[workspace.dependencies]
# `version` is used when publishing to crates.io; `path` is used locally.
tork-orm-cli = { path = "../orm/crates/tork-orm-cli", version = "0.1.0", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "signal", "time", "sync"] }
notify = "6"
# Arrow-key interactive prompts (the project name and database selection).
dialoguer = { version = "0.11", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
